[package]
name = "nostd"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.7", features = ["processthreadsapi", "winuser", "fileapi", "processenv", "winbase"] }

[target.'cfg(target_os="linux")'.dependencies]
libc = { version = "0.2", default-features = false }
